RESOLVED FIXED212304
[LFC][TFC] Maximum constraint of a cell should never be smaller than the minimum width
https://bugs.webkit.org/show_bug.cgi?id=212304
Summary [LFC][TFC] Maximum constraint of a cell should never be smaller than the mini...
alan
Reported 2020-05-23 10:44:28 PDT
ssia
Attachments
Patch (5.03 KB, patch)
2020-05-23 12:03 PDT, alan
no flags
alan
Comment 1 2020-05-23 12:03:05 PDT
EWS
Comment 2 2020-05-23 12:47:55 PDT
Committed r262102: <https://trac.webkit.org/changeset/262102> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400132 [details].
Radar WebKit Bug Importer
Comment 3 2020-05-23 12:48:16 PDT
Note You need to log in before you can comment on or make changes to this bug.