[LFC][TFC] Maximum constraint of a cell should never be smaller than the minimum width https://bugs.webkit.org/show_bug.cgi?id=212304

Reviewed by Antti Koivisto.

Source/WebCore:

Test: fast/layoutformattingcontext/table-simple-fixed-width-with-wide-content.html

* layout/tableformatting/TableFormattingContextGeometry.cpp:
(WebCore::Layout::TableFormattingContext::Geometry::intrinsicWidthConstraintsForCell):

LayoutTests:

* fast/layoutformattingcontext/table-simple-fixed-width-with-wide-content-expected.html: Added.
* fast/layoutformattingcontext/table-simple-fixed-width-with-wide-content.html: Added.


Canonical link: https://commits.webkit.org/225165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262102 268f45cc-cd09-0410-ab3c-d52691b4dbfc